fixed thankyou overlap and openweatherapi

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -344,6 +344,16 @@ footer {
     margin-bottom: 10px;
 }
 
+.background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+}
+
 .form-title {
     color: red;
     font-size: 24px;
@@ -587,4 +597,9 @@ footer {
 
 .event:hover {
     background-color: #FF7F50;
+}
+
+#weather-icon {
+    width: 100px;
+    height: 100px; 
 }
